sjeng/use_undefined_identifier/c2/Queen
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/Queen/src/neval.c:750:7: error: use of undeclared identifier 'dword_66759C'
v5 = &dword_66759C[v3]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/Queen/src/obj/neval.o] Error 1
